Added archivePreviousRun setting; fixed slowness w/ multiple directory deletions.

--- a/package.json
+++ b/package.json
@@ -36,6 +36,12 @@
                "description": "Automatically show log upon Nextflow exit",
                "default": true,
                "title": "Automatically Show Log Upon Nextflow exit"
+            },
+            "nextflow-sandbox.archivePreviousRun": {
+               "type": "boolean",
+               "description": "Archive previous run work folders before running",
+               "default": true,
+               "title": "Archive Previous Run Work Folders Before Running"
             }
          }
       },
