--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
    "name": "nextflow-sandbox",
    "displayName": "Nextflow Sandbox",
-   "description": "Enhanced testing environment for Nextflow pipelines",
-   "publisher": "mechdyne",
+   "description": "Workspace tree views and utilities for Nextflow pipelines",
+   "repository": {
+      "url": "https://github.com/michael-brazell-md/nextflow-sandbox"
+   },
+   "publisher": "mbrazell",
+   "author": {
+      "name": "Michael Brazell",
+      "email": "mbrazell@mechdyne.com"
+   },
    "version": "0.0.1",
    "engines": {
       "vscode": "^1.41.0"
@@ -294,6 +301,10 @@
       "pretest": "npm run compile",
       "test": "node ./out/test/runTest.js"
    },
+   "dependencies": {
+		"mkdirp": "^0.5.1",
+		"rimraf": "^2.6.2"
+	},
    "devDependencies": {
       "@types/glob": "^7.1.1",
       "@types/mkdirp": "^0.5.2",
@@ -305,6 +316,6 @@
       "mocha": "^6.2.2",
       "tslint": "^5.20.0",
       "typescript": "^3.6.4",
-      "vscode-test": "^1.2.2"
+      "vscode-test": "^1.3.0"
    }
 }
