--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,19 @@
 {
 	"version": "0.2.0",
 	"configurations": [
+   {
+      "args": [
+         "--extensionDevelopmentPath=${workspaceFolder}"
+      ],
+      "name": "Launch Extension",
+      "outFiles": [
+         "${workspaceFolder}/out/**/*.js"
+      ],
+      "preLaunchTask": "npm",
+      "request": "launch",
+      "runtimeExecutable": "${execPath}",
+      "type": "pwa-extensionHost"
+   },
 		{
 			"name": "Run Extension",
 			"type": "extensionHost",
