--- a/resources/settings.json
+++ b/resources/settings.json
@@ -1,9 +1,9 @@
 {
+   "args": [],
+   "options": [],
    "repository": {
       "url": "",
       "hub": "",
       "tag": ""
-   },
-   "options": [],
-   "args": []
+   }
 }
